<resources>
    <string name="app_name">Cadastrov2</string>
    <string name="txtCadastro">Cadastro</string>
    <string name="txtNomeMsg">Digite seu nome</string>
    <string name="txtEnderecoMsg">Digite seu Endereco</string>
    <string name="txtBairroMsg"> Digite seu Bairro </string>
    <string name="txtCidadeMsg">Digite sua Cidade</string>
    <string name="txtEstadoMsg">Digite seu Estado</string>
    <string name="txtCepMsg">Digite seu Cep</string>

    <string name="btnCadastrar">Cadastrar</string>
</resources>